--- a/test.html
+++ b/test.html
@@ -61,5 +61,9 @@
         		</todo-item>
         	</ul>
         </div>
+        <div id="example">
+        	<p>Original message:{{message}}</p>
+        	<p>Computed reversed message:{{reverseMessage}}</p>
+        </div>
 	</body>
 </html>
